--- a/style/sharedStyle.css
+++ b/style/sharedStyle.css
@@ -11,6 +11,11 @@ body, html {
   line-height: 160%;
 }
 
+.line-height-210 {
+  line-height: 210%;
+  margin: 0;
+}
+
 /*----------------------------------FADEIN*/
 section {
   opacity: 0;
