finish zilter page, add relevant links section

--- a/style/sharedStyle.css
+++ b/style/sharedStyle.css
@@ -7,6 +7,13 @@ body, html {
   transition: all 0.5s ease;
 }
 
+p {
+  line-height: 210%;
+  margin: 0;
+}
+
+a { color: black; }
+
 .line-height-160 {
   line-height: 160%;
 }
@@ -15,6 +22,9 @@ body, html {
   line-height: 210%;
   margin: 0;
 }
+
+.mb-2 { margin-bottom: 2vw; }
+.mb-0 { margin-bottom: 0vw; }
 
 /*----------------------------------FADEIN*/
 section {
