--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -136,6 +136,7 @@
 #title {
   font-weight: 600;
   font-size: 1.8vw;
+  line-height: normal;
   padding-top: 1vw;
   padding-bottom: 0.5vw;
   margin: 0;
