--- a/style/workStyle.css
+++ b/style/workStyle.css
@@ -12,8 +12,8 @@ html, body {
   background-color: #A5D6A7;
 }
 
-.quote {
-  margin-left: 5vw;
+#link {
+  transition: all 0.5s ease;
 }
 
 .subheader {
@@ -61,7 +61,7 @@ html, body {
 /*---------------------------Banner Container*/
 .heading-container {
   display: grid;
-  grid-template-columns: 69% 31%;
+  grid-template-columns: 100%;
   margin-left: 5vw;
   margin-right: 5vw;
 }
@@ -94,7 +94,8 @@ html, body {
 #body-header {
   font-size: 1.3vw;
   font-weight: 600;
-  text-align: right;
+  line-height: normal;
+  text-align: left;
   padding-right: 1vw;
   margin: 0;
 }
@@ -102,7 +103,7 @@ html, body {
 /*---------------------------Impact Container*/
 .impact-container {
   display: grid;
-  grid-template-columns: 15% 35% 50%;
+  grid-template-columns: 15% 42.5% 42.5%;
   margin-bottom: 5vw;
 }
 
@@ -117,7 +118,7 @@ html, body {
 }
 
 .caption {
-  padding-right: 1vw;
+  padding-right: 3vw;
 }
 
 /*---------------------------iOS Container*/
@@ -143,6 +144,10 @@ html, body {
 
 .ca-title {
   font-weight: 500;
+}
+
+.notable-features {
+  padding-left: 10%;
 }
 
 /*---------------------------Prototype Container*/
@@ -204,7 +209,7 @@ html, body {
 .conclusion-container {
   display: grid;
   grid-template-columns: 15% 85%;
-  margin-bottom: 20vw;
+  margin-bottom: 15vw;
 }
 
 .conclusion-container p {
