--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -18,7 +18,7 @@
 }
 
 #name {
-  font-size: 2vw;
+  font-size: 1.5vw;
   font-weight: 500;
   text-decoration: none;
   display: inline;
@@ -53,15 +53,6 @@
   text-align: center;
   font-size: 1.5vw;
   transition: all 0.3s ease;
-}
-
-#parallax-bar {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 1vw;
-  background-color: rgb(230,230,230);
-  transition: all 0.5s ease;
 }
 
 /*-----------------------------WORK*/
@@ -143,8 +134,8 @@
 }
 
 #summary {
-  font-weight: 500;
-  font-size: 0.9vw;
+  /*font-weight: 500;*/
+  font-size: 1.1vw;
   line-height: 140%;
   color: rgb(150,150,150);
   margin: 0;
