--- a/style/workStyle.css
+++ b/style/workStyle.css
@@ -39,10 +39,21 @@ html, body {
 }
 
 .banner {
-  width: 70vw;
-  height: 20vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 40vw;
   display: table;
   margin-bottom: 5vw;
+}
+
+.banner-info {
+  width: 76vw;
+  height: 20vw;
+  display: table;
+  margin-bottom: 13vw;
 }
 
 #valign-div {
@@ -65,8 +76,8 @@ html, body {
 .heading-container {
   display: grid;
   grid-template-columns: 100%;
-  margin-left: 5vw;
-  margin-right: 5vw;
+  /*margin-left: 5vw;
+  margin-right: 5vw;*/
 }
 
 .work-logo {
@@ -81,7 +92,7 @@ html, body {
 /*---------------------------Body Container*/
 .body-container {
   display: grid;
-  grid-template-columns: 15% 85%;
+  grid-template-columns: 20% 80%;
   margin-bottom: 5vw;
 }
 
@@ -106,7 +117,7 @@ html, body {
 /*---------------------------Impact Container*/
 .impact-container {
   display: grid;
-  grid-template-columns: 15% 42.5% 42.5%;
+  grid-template-columns: 20% 40% 40%;
   margin-bottom: 5vw;
 }
 
@@ -127,7 +138,7 @@ html, body {
 /*---------------------------iOS Container*/
 .ios-container {
   display: grid;
-  grid-template-columns: 15% 5% 30% 15% 30% 5%;
+  grid-template-columns: 20% 4% 29% 14% 29% 4%;
   margin-bottom: 5vw;
 }
 .ios-container img {
@@ -138,7 +149,7 @@ html, body {
 /*---------------------------Competitive Analysis Container*/
  .ca-container {
   display: grid;
-  grid-template-columns: 15% 20% 65%;
+  grid-template-columns: 20% 18% 62%;
  }
 .ca-container img {
   width: 100%;
@@ -156,7 +167,7 @@ html, body {
 /*---------------------------Prototype Container*/
 .p-container {
   display: grid;
-  grid-template-columns: 15% 40% 5% 40%;
+  grid-template-columns: 20% 38% 4% 38%;
   margin-bottom: 5vw;
 }
 
@@ -167,11 +178,8 @@ html, body {
 }
 
 /*---------------------------Long Term*/
-.longterm-banner {
-  width: 70vw;
-  height: 20vw;
+#longterm-banner {
   background-color: #343434;
-  margin-bottom: 5vw;
 }
 
 #longterm-title {
@@ -212,7 +220,7 @@ html, body {
 /*---------------------------Conclusion Container*/
 .conclusion-container {
   display: grid;
-  grid-template-columns: 15% 85%;
+  grid-template-columns: 20% 80%;
   margin-bottom: 15vw;
 }
 
