--- a/style/sharedStyle.css
+++ b/style/sharedStyle.css
@@ -2,6 +2,7 @@
 
 body, html {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  /*font-family: Roboto, sans-serif;*/
   margin: 0;
   padding: 0;
   transition: all 0.5s ease;
