--- a/style/aboutStyle.css
+++ b/style/aboutStyle.css
@@ -4,37 +4,63 @@
   margin-bottom: 5vw;
 }
 
-.aboutArea {
+.about-container {
   display: grid;
-  grid-template-columns: 55% 15% 30%;
-  margin-bottom: 10vw;
+  grid-template-columns: 33.3% 33.3% 33.3%;
+  margin-bottom: 5vw;
 }
 
-.aboutArea p {
+.about-container p {
   font-size: 1.3vw;
-  line-height: 140%;
+  line-height: 160%;
   margin: 0;
+}
+
+.about-right-pad {
+  padding-right: 2.5vw;
+}
+
+.padding-bottom {
+  padding-bottom: 5vw;
 }
 
 .aboutHeader {
   font-size: 1.8vw;
   font-weight: 500;
   color: #BDBDBD;
-  padding-bottom: 0.5vh;
-}
-
-.about-subdivs {
-  margin-bottom: 3vw;
+  padding-bottom: 1.5vw;
 }
 
 .about-p {
-  padding-bottom: 1vw;
+  padding-bottom: 2vw;
 }
 
-#movie-title {
-  font-size: 1vw;
+/*-------------------------------------MOVIE*/
+#movie {
+  position: relative;
+  width: fit-content;
+}
+#movie-txt {
+  text-decoration: underline;
+}
+#movie-img {
+  position: absolute;
+  visibility: hidden;
+  width: 18vw;
 }
 
-#movie-poster {
-  padding-top: 1vh;
+#movie #movie-img, #movie #movie-txt {
+  transition: all 0.5s ease;
+}
+#movie #movie-img {
+  position:absolute; 
+  opacity:0;
+}
+#movie:hover #movie-txt {
+  cursor: default;
+  opacity:0;
+}
+#movie:hover #movie-img {
+  visibility: visible;
+  opacity:1;
 }
