--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -1,31 +1,3 @@
-#light-bg {
-  position: relative;
-  background: url("../assets/light-bg.jpg");
-  background-attachment: fixed;
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  -webkit-filter: grayscale(30%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(30%);
-  transition: all 0.5s ease;
-  z-index: 0;
-  height: fit-content;
-}
-
-/*----------------------------------HEADER*/
-#name-div {
-  float: left;
-  transition: all 0.5s ease;
-}
-
-#name {
-  font-size: 1.5vw;
-  font-weight: 500;
-  text-decoration: none;
-  display: inline;
-  transition: all 0.5s ease;
-  cursor: default;
-}
-
 /*-----------------------------INTRODUCTION BODY*/
 #description {
   font-size: 3vw;
@@ -35,30 +7,31 @@
   transition: all 0.5s ease;
   width: 55%;
   line-height: 120%;
+  z-index: 10;
 }
 #description-2 {
   font-size: 1.8vw;
   transition: all 0.5s ease;
-  margin-bottom: 24vw;
+  margin-bottom: 10vw;
   width: 55%;
   line-height: 120%;
+  z-index: 10;
 }
 
-.wip {
-  text-align: center;
-  font-size: 1.5vw;
-  transition: all 0.3s ease;
+#color-block {
+  position: absolute;
+  top: 14vw;
+  right: 12vw;
+  width: 45%;
+  height: 25vw;
+  background-color: rgb(200,200,200);
+  opacity: 0.5;
+  z-index: 1;
 }
 
 /*-----------------------------WORK*/
 .fixed-txt {
   position: fixed;
-  z-index: 1;
-}
-
-.content {
-  margin-left: 12vw;
-  margin-right: 12vw;
   z-index: 1;
 }
 
@@ -86,8 +59,6 @@
 .grid-item {
   position: relative;
   width: 90%;
-  /*width: 32vw;
-  height: 32vw;*/
   margin-bottom: 10vw;
 }
 
