--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -12,10 +12,20 @@
 #description-2 {
   font-size: 1.8vw;
   transition: all 0.5s ease;
-  margin-bottom: 10vw;
+  margin-bottom: 15vw;
   width: 55%;
   line-height: 120%;
   z-index: 10;
+}
+
+#white-block {
+  position: absolute;
+  top: 14vw;
+  right: 12vw;
+  width: 45%;
+  height: 25vw;
+  background: white;
+  z-index: -1;
 }
 
 #color-block {
@@ -24,10 +34,41 @@
   right: 12vw;
   width: 45%;
   height: 25vw;
-  background-color: rgb(200,200,200);
   opacity: 0.5;
   z-index: -1;
+  animation: colorchange 20s ease infinite;
+  -webkit-animation: colorchange 20s ease infinite; /* Chrome and Safari */
 }
+
+@keyframes colorchange {
+  0%   {background: red;}
+  10%  {background: orange;}
+  20%  {background: yellow;}
+  30%  {background: green;}
+  40% {background: olive;}
+  50% {background: teal;}
+  60% {background: blue;}
+  70% {background: navy;}
+  80% {background: purple;}
+  90% {background: maroon;}
+  100% {background: red;}
+}
+
+@-webkit-keyframes colorchange {
+  0%   {background: red;}
+  10%  {background: orange;}
+  20%  {background: yellow;}
+  30%  {background: green;}
+  40% {background: olive;}
+  50% {background: teal;}
+  60% {background: blue;}
+  70% {background: navy;}
+  80% {background: purple;}
+  90% {background: maroon;}
+  100% {background: red;}
+}
+
+
 
 /*-----------------------------WORK*/
 .fixed-txt {
