changing color block, new nav

--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -9,6 +9,12 @@
   line-height: 120%;
   z-index: 10;
 }
+
+@media only screen and (max-width: 518px) {
+  #description {
+    width: 60%;
+  }
+}
 #description-2 {
   font-size: 1.8vw;
   transition: all 0.5s ease;
@@ -148,16 +154,20 @@
   font-weight: 500;
   font-size: 2vw;
   line-height: normal;
-  padding-bottom: 2vw;
-  margin: 0;
+  margin-bottom: 2vw;
+  width: fit-content;
+  text-decoration: none;
+}
+#title:hover {
+  text-decoration: underline;
 }
 
 #summary {
   font-size: 1.3vw;
   font-weight: 300;
   line-height: 160%;
+  margin-top: 2vw;
   padding-bottom: 2vw;
-  margin: 0;
 }
 
 #year {
