--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -40,38 +40,38 @@
   right: 12vw;
   width: 45%;
   height: 25vw;
-  opacity: 0.5;
+  opacity: 0.75;
   z-index: -1;
   animation: colorchange 20s ease infinite;
   -webkit-animation: colorchange 20s ease infinite; /* Chrome and Safari */
 }
 
 @keyframes colorchange {
-  0%   {background: red;}
-  10%  {background: maroon;}
-  20%  {background: purple;}
-  30%  {background: navy;}
-  40% {background: blue;}
-  50% {background: teal;}
-  60% {background: olive;}
-  70% {background: green;}
-  80% {background: yellow;}
-  90% {background: orange;}
-  100% {background: red;}
+  0%   {background: #E57373;}
+  10% {background: #F06292;}
+  20%  {background: #BA68C8;}
+  30%  {background: #7986CB;}
+  40%  {background: #4FC3F7;}
+  50% {background: #4DB6AC;}
+  60% {background: #81C784;}
+  70% {background: #DCE775;}
+  80% {background: #FFD54F;}
+  90% {background: #FFB74D;}
+  100% {background: #E57373;}
 }
 
 @-webkit-keyframes colorchange {
-  0%   {background: red;}
-  10%  {background: maroon;}
-  20%  {background: purple;}
-  30%  {background: navy;}
-  40% {background: blue;}
-  50% {background: teal;}
-  60% {background: olive;}
-  70% {background: green;}
-  80% {background: yellow;}
-  90% {background: orange;}
-  100% {background: red;}
+  0%   {background: #E57373;}
+  10% {background: #F06292;}
+  20%  {background: #BA68C8;}
+  30%  {background: #7986CB;}
+  40%  {background: #4FC3F7;}
+  50% {background: #4DB6AC;}
+  60% {background: #81C784;}
+  70% {background: #DCE775;}
+  80% {background: #FFD54F;}
+  90% {background: #FFB74D;}
+  100% {background: #E57373;}
 }
 
 
@@ -113,6 +113,7 @@
   height: 100%;
   width: 100%;
   transition: all 0.2s ease;
+  overflow: visible;
 }
 
 .grid-item-right {
