--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -1,22 +1,23 @@
 /*-----------------------------RESPONSIVENESS*/
 @media only screen and (max-width: 767px) {
-  #year { display: none; }
-  
-  body #description { font-size: 5.5vw; width: 100%; margin-bottom: 26vw; margin-top: 8vw;}
-  body #color-block { top: 50vw; left: 12vw; width: 76%; height: 8vw; }
-  body #white-block { top: 50vw; left: 12vw; width: 76%; height: 8vw; }
-  body #description-2 { font-size: 3.5vw; width: 100%; margin-bottom: 19vw;}
+  /*landing*/
+  body #description { font-size: 5.5vw; width: 100%; margin-bottom: 26vw; }
+  body #color-block { top: 57vw; left: 12vw; width: 76%; height: 8vw; }
+  body #white-block { top: 57vw; left: 12vw; width: 76%; height: 8vw; }
+  body #description-2 { font-size: 4vw; width: 100%; margin-bottom: 19vw; }
+  /*end landing*/
 
-  body .content-header { font-size: 2vw; margin-bottom: 5vw; } 
-
-  body .grid-container-right { display: flex; flex-wrap: wrap; margin-bottom: 7vw;}
-  body .grid-container-left { display: flex; flex-wrap: wrap; margin-bottom: 7vw;}
+  /*work*/
+  body .grid-container-right { display: flex; flex-wrap: wrap; margin-bottom: 7vw; }
+  body .grid-container-left { display: flex; flex-wrap: wrap; margin-bottom: 7vw; }
   body #work-img { order: 1; }
   body #work-des { order: 2; }
-  body .grid-item { margin-bottom: 4vw; width: 100%;}
-  body #title { font-size: 3vw; }
-  body #summary { font-size: 2.2vw; }
+  body .grid-item { margin-bottom: 4vw; width: 100%; }
+  body #title { font-size: 4vw; }
+  #year { display: none; }
+  body #summary { font-size: 2.5vw; }
   body .coming-soon { font-size: 4vw; }
+  /*end work*/
 }
 
 
@@ -96,11 +97,6 @@
 .fixed-txt {
   position: fixed;
   z-index: 1;
-}
-
-.content-header {
-  font-size: 1vw;
-  margin-bottom: 2vw;
 }
 
 .grid-container-right {
